First server tests running

--- a/test/client/ClientTestRunner.html
+++ b/test/client/ClientTestRunner.html
@@ -12,5 +12,7 @@
 <script type="text/javascript">
     mocha.setup('bdd');
 </script>
+<script data-main="test.client.config.js" src="lib/requirejs/require.js">
+</script>
 </body>
 </html>
